; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_clone.c_add_one_reference.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_clone.c_add_one_reference.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i8* }
%struct.string_list_item = type { i8* }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 8
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@stderr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [44 x i8] c"info: Could not add alternate for '%s': %s\0A\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"%s/objects\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.string_list_item*, i8*)* @add_one_reference to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @add_one_reference(%struct.string_list_item* %0, i8* %1) #0 {
  %3 = alloca %struct.string_list_item*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.strbuf, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.strbuf, align 8
  store %struct.string_list_item* %0, %struct.string_list_item** %3, align 8
  store i8* %1, i8** %4, align 8
  %9 = bitcast %struct.strbuf* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %9, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %6, align 8
  %12 = load %struct.string_list_item*, %struct.string_list_item** %3, align 8
  %13 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  %15 = call i8* @compute_alternate_path(i8* %14, %struct.strbuf* %5)
  store i8* %15, i8** %7, align 8
  %16 = load i8*, i8** %7, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %36, label %18

18:                                               ; preds = %2
  %19 = load i32*, i32** %6, align 8
  %20 = load i32, i32* %19, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %18
  %23 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 0
  %24 = load i8*, i8** %23, align 8
  %25 = call i32 @die(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %24)
  br label %35

26:                                               ; preds = %18
  %27 = load i32, i32* @stderr, align 4
  %28 = call i8* @_(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.1, i64 0, i64 0))
  %29 = load %struct.string_list_item*, %struct.string_list_item** %3, align 8
  %30 = getelementptr inbounds %struct.string_list_item, %struct.string_list_item* %29, i32 0, i32 0
  %31 = load i8*, i8** %30, align 8
  %32 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 0
  %33 = load i8*, i8** %32, align 8
  %34 = call i32 @fprintf(i32 %27, i8* %28, i8* %31, i8* %33)
  br label %35

35:                                               ; preds = %26, %22
  br label %44

36:                                               ; preds = %2
  %37 = bitcast %struct.strbuf* %8 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %37, i8* align 8 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 8, i1 false)
  %38 = load i8*, i8** %7, align 8
  %39 = call i32 @strbuf_addf(%struct.strbuf* %8, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8* %38)
  %40 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %8, i32 0, i32 0
  %41 = load i8*, i8** %40, align 8
  %42 = call i32 @add_to_alternates_file(i8* %41)
  %43 = call i32 @strbuf_release(%struct.strbuf* %8)
  br label %44

44:                                               ; preds = %36, %35
  %45 = call i32 @strbuf_release(%struct.strbuf* %5)
  %46 = load i8*, i8** %7, align 8
  %47 = call i32 @free(i8* %46)
  ret i32 0
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i8* @compute_alternate_path(i8*, %struct.strbuf*) #2

declare dso_local i32 @die(i8*, i8*) #2

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*) #2

declare dso_local i8* @_(i8*) #2

declare dso_local i32 @strbuf_addf(%struct.strbuf*, i8*, i8*) #2

declare dso_local i32 @add_to_alternates_file(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2

declare dso_local i32 @free(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
